[project]
name = "mercado"
requires-python = ">=3.11"


[tool.poetry]
name = "mercado"
version = "0.2.1"
description = "All-In-One Development CLI Tools Multi-platform Marketplace"

authors = [
    "YuviGold"
]

repository = "https://github.com/YuviGold/mercado"
readme = "README.md"

keywords = ["cli", "devops", "automation"]

[tool.poetry.dependencies]
python = ">=3.11"

humanize = "^4.11.0"
requests = "^2.32.3"
rich = "^13.9.4"
typer = ">=0.13,<0.15"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
cogapp = "^3.4.1"
ruff = "^0.7.3"

[tool.poetry.scripts]
mercado = "mercado.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    "N", # pep8-naming
    # isort
    "I001",
    "I002",
]
