[project]
name = "mercado"
version = "0.2.1"
requires-python = ">=3.11"
description = "All-In-One Development CLI Tools Multi-platform Marketplace"
authors = [{"name" = "YuviGold"}]
readme = "README.md"
keywords = ["cli", "devops", "automation"]
dependencies = [
    "humanize (>=4.11.0,<5.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "rich (>=13.9.4,<14.0.0)",
    "typer (>=0.15.1,<0.16.0)",
]

[project.urls]
Repository = "https://github.com/YuviGold/mercado"

[project.scripts]
mercado = "mercado.cli:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
cogapp = "^3.4.1"
ruff = "^0.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    "N", # pep8-naming
    # isort
    "I001",
    "I002",
]
